TAB-3201 More work upgrading specs to specs2, getting the _right_ spring-scala (built ourselves)